--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file alias="def">resources/default.jpg</file>
+        <file>resources/default.jpg</file>
     </qresource>
 </RCC>
